[gd_scene load_steps=9 format=3 uid="uid://b4scbqjbo7wtn"]

[ext_resource type="Script" uid="uid://cewnhu2rh0e0t" path="res://scenes/core/player_menu.gd" id="1_vp4nb"]
[ext_resource type="PackedScene" uid="uid://fj8aywus2k54" path="res://scenes/authentication/authentication.tscn" id="2_bhayt"]
[ext_resource type="Script" uid="uid://c61vwloon4wkn" path="res://scenes/ui/menu_manager.gd" id="2_thu8f"]
[ext_resource type="Script" uid="uid://od4pn8270p8w" path="res://scenes/ui/menu.gd" id="3_eunye"]
[ext_resource type="Script" uid="uid://big6x6sbx85sq" path="res://scenes/ui/player_menu.gd" id="4_2ah4n"]
[ext_resource type="PackedScene" uid="uid://bs85sd7odwt6f" path="res://scenes/ui/item_display.tscn" id="4_s8rod"]
[ext_resource type="Texture2D" uid="uid://c6awj3vyf0r55" path="res://assets/stash-frame.png" id="6_gpvpi"]
[ext_resource type="Script" uid="uid://dmgbe3sqm4g8a" path="res://scenes/components/inventory.gd" id="6_uhn2d"]

[node name="PlayerMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vp4nb")

[node name="MenuManager" type="Node" parent="."]
physics_interpolation_mode = 2
script = ExtResource("2_thu8f")
menu_paths = Array[NodePath]([NodePath("../Login"), NodePath("../Player")])
starting_menu_name = "Login"

[node name="Label" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -165.0
offset_top = -301.0
offset_right = 165.0
offset_bottom = -278.0
grow_horizontal = 2
grow_vertical = 2
text = "Dummy Text for Login and Player Menu :)))"

[node name="Login" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("3_eunye")

[node name="Authentication" parent="Login" instance=ExtResource("2_bhayt")]
layout_mode = 1

[node name="Player" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("4_2ah4n")

[node name="HBoxContainer" type="HBoxContainer" parent="Player"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -222.0
offset_top = -53.0
offset_right = 222.0
grow_horizontal = 2
grow_vertical = 0

[node name="PlayGame" type="Button" parent="Player/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Play Game"

[node name="PlayLocalServer" type="Button" parent="Player/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Play Local Server"

[node name="PlayerInfo" type="VBoxContainer" parent="Player"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -101.0
offset_top = 16.0
offset_right = 101.0
offset_bottom = 110.0
grow_horizontal = 2

[node name="UserId" type="Label" parent="Player/PlayerInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "User Id:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Name" type="Label" parent="Player/PlayerInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Name:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Level" type="Label" parent="Player/PlayerInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Level:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StashFrameContainer" type="MarginContainer" parent="Player"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -116.0
offset_top = -78.0
offset_right = 116.0
offset_bottom = 78.0
grow_horizontal = 2
grow_vertical = 2

[node name="StashFrame" type="NinePatchRect" parent="Player/StashFrameContainer"]
layout_mode = 2
texture = ExtResource("6_gpvpi")
region_rect = Rect2(0, 0, 42, 42)
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="MarginContainer" type="MarginContainer" parent="Player/StashFrameContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="StashContainer" type="GridContainer" parent="Player/StashFrameContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/h_separation = 6
theme_override_constants/v_separation = 6
columns = 6

[node name="ItemDisplay" parent="Player/StashFrameContainer/MarginContainer/StashContainer" instance=ExtResource("4_s8rod")]
layout_mode = 2
item = 1
quantity = 1

[node name="ItemDisplay2" parent="Player/StashFrameContainer/MarginContainer/StashContainer" instance=ExtResource("4_s8rod")]
layout_mode = 2
item = 2
quantity = 3

[node name="ItemDisplay3" parent="Player/StashFrameContainer/MarginContainer/StashContainer" instance=ExtResource("4_s8rod")]
layout_mode = 2

[node name="ItemDisplay4" parent="Player/StashFrameContainer/MarginContainer/StashContainer" instance=ExtResource("4_s8rod")]
layout_mode = 2

[node name="ItemDisplay5" parent="Player/StashFrameContainer/MarginContainer/StashContainer" instance=ExtResource("4_s8rod")]
layout_mode = 2

[node name="ItemDisplay6" parent="Player/StashFrameContainer/MarginContainer/StashContainer" instance=ExtResource("4_s8rod")]
layout_mode = 2

[node name="ItemDisplay7" parent="Player/StashFrameContainer/MarginContainer/StashContainer" instance=ExtResource("4_s8rod")]
layout_mode = 2

[node name="ItemDisplay8" parent="Player/StashFrameContainer/MarginContainer/StashContainer" instance=ExtResource("4_s8rod")]
layout_mode = 2

[node name="ItemDisplay9" parent="Player/StashFrameContainer/MarginContainer/StashContainer" instance=ExtResource("4_s8rod")]
layout_mode = 2

[node name="ItemDisplay10" parent="Player/StashFrameContainer/MarginContainer/StashContainer" instance=ExtResource("4_s8rod")]
layout_mode = 2

[node name="ItemDisplay11" parent="Player/StashFrameContainer/MarginContainer/StashContainer" instance=ExtResource("4_s8rod")]
layout_mode = 2

[node name="ItemDisplay12" parent="Player/StashFrameContainer/MarginContainer/StashContainer" instance=ExtResource("4_s8rod")]
layout_mode = 2

[node name="ItemDisplay13" parent="Player/StashFrameContainer/MarginContainer/StashContainer" instance=ExtResource("4_s8rod")]
layout_mode = 2

[node name="ItemDisplay14" parent="Player/StashFrameContainer/MarginContainer/StashContainer" instance=ExtResource("4_s8rod")]
layout_mode = 2

[node name="ItemDisplay15" parent="Player/StashFrameContainer/MarginContainer/StashContainer" instance=ExtResource("4_s8rod")]
layout_mode = 2

[node name="ItemDisplay16" parent="Player/StashFrameContainer/MarginContainer/StashContainer" instance=ExtResource("4_s8rod")]
layout_mode = 2

[node name="ItemDisplay17" parent="Player/StashFrameContainer/MarginContainer/StashContainer" instance=ExtResource("4_s8rod")]
layout_mode = 2

[node name="ItemDisplay18" parent="Player/StashFrameContainer/MarginContainer/StashContainer" instance=ExtResource("4_s8rod")]
layout_mode = 2

[node name="ItemDisplay19" parent="Player/StashFrameContainer/MarginContainer/StashContainer" instance=ExtResource("4_s8rod")]
layout_mode = 2

[node name="ItemDisplay20" parent="Player/StashFrameContainer/MarginContainer/StashContainer" instance=ExtResource("4_s8rod")]
layout_mode = 2

[node name="ItemDisplay21" parent="Player/StashFrameContainer/MarginContainer/StashContainer" instance=ExtResource("4_s8rod")]
layout_mode = 2

[node name="ItemDisplay22" parent="Player/StashFrameContainer/MarginContainer/StashContainer" instance=ExtResource("4_s8rod")]
layout_mode = 2

[node name="ItemDisplay23" parent="Player/StashFrameContainer/MarginContainer/StashContainer" instance=ExtResource("4_s8rod")]
layout_mode = 2

[node name="ItemDisplay24" parent="Player/StashFrameContainer/MarginContainer/StashContainer" instance=ExtResource("4_s8rod")]
layout_mode = 2

[node name="InventoryFrameContainer" type="MarginContainer" parent="Player"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -116.0
offset_top = 115.0
offset_right = 116.0
offset_bottom = 157.0
grow_horizontal = 2
grow_vertical = 2

[node name="StashFrame" type="NinePatchRect" parent="Player/InventoryFrameContainer"]
layout_mode = 2
texture = ExtResource("6_gpvpi")
region_rect = Rect2(0, 0, 42, 42)
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="MarginContainer" type="MarginContainer" parent="Player/InventoryFrameContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="InventoryContainer" type="HBoxContainer" parent="Player/InventoryFrameContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="ItemDisplay" parent="Player/InventoryFrameContainer/MarginContainer/InventoryContainer" instance=ExtResource("4_s8rod")]
layout_mode = 2
item = 2
quantity = 1

[node name="ItemDisplay2" parent="Player/InventoryFrameContainer/MarginContainer/InventoryContainer" instance=ExtResource("4_s8rod")]
layout_mode = 2

[node name="ItemDisplay3" parent="Player/InventoryFrameContainer/MarginContainer/InventoryContainer" instance=ExtResource("4_s8rod")]
layout_mode = 2

[node name="ItemDisplay4" parent="Player/InventoryFrameContainer/MarginContainer/InventoryContainer" instance=ExtResource("4_s8rod")]
layout_mode = 2

[node name="ItemDisplay5" parent="Player/InventoryFrameContainer/MarginContainer/InventoryContainer" instance=ExtResource("4_s8rod")]
layout_mode = 2

[node name="ItemDisplay6" parent="Player/InventoryFrameContainer/MarginContainer/InventoryContainer" instance=ExtResource("4_s8rod")]
layout_mode = 2

[node name="Inventory" type="Node" parent="Player"]
script = ExtResource("6_uhn2d")
metadata/_custom_type_script = "uid://dmgbe3sqm4g8a"

[node name="Stash" type="Node" parent="Player"]
script = ExtResource("6_uhn2d")
metadata/_custom_type_script = "uid://dmgbe3sqm4g8a"

[connection signal="pressed" from="Player/HBoxContainer/PlayGame" to="." method="_on_play_game_pressed"]
[connection signal="pressed" from="Player/HBoxContainer/PlayLocalServer" to="." method="_on_play_local_server_pressed"]
